--- a/.github/workflows/gradle-build-and-test.yml
+++ b/.github/workflows/gradle-build-and-test.yml
@@ -4,8 +4,7 @@ on: [push, pull_request]
 
 jobs:
   build:
-    runs-on: ubuntu-latest
-
+    runs-on: ubuntu-latest 
     steps:
       - uses: actions/checkout@v3
       - name: Set up JDK 17
@@ -16,7 +15,8 @@ jobs:
       - name: Validate Gradle wrapper
         uses: gradle/wrapper-validation-action@v1.0.0
       - name: Build with Gradle
-        uses: gradle/gradle-build-action@v1.10.0
+        uses: gradle/gradle-build-action@2.4.2
+
         with:
           arguments: build
       - uses: actions/upload-artifact@v3
