--- a/.github/workflows/gradle-build-and-test.yml
+++ b/.github/workflows/gradle-build-and-test.yml
@@ -15,8 +15,7 @@ jobs:
       - name: Validate Gradle wrapper
         uses: gradle/wrapper-validation-action@v1.0.0
       - name: Build with Gradle
-        uses: gradle/gradle-build-action@2.4.2
-
+      - uses: gradle/gradle-build-action@2.4.2
         with:
           arguments: build
       - uses: actions/upload-artifact@v3
