--- a/.github/workflows/gradle-build-and-test.yml
+++ b/.github/workflows/gradle-build-and-test.yml
@@ -15,10 +15,11 @@ jobs:
       - name: Validate Gradle wrapper
         uses: gradle/wrapper-validation-action@v1.0.0
       - name: Build with Gradle
-      - uses: gradle/gradle-build-action@2.4.2
+        uses: gradle/gradle-build-action@2.4.2
         with:
           arguments: build
-      - uses: actions/upload-artifact@v3
+      - name: Upload Package Artifact
+        uses: actions/upload-artifact@v3
         with:
           name: Package
           path: build/libs
